# Pac-Man

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  boost.cpp  boost.hpp  boost_manager.cpp  boost_manager.hpp  game.cpp  game.hpp  game_map.cpp  game_map.hpp  game_object.cpp  game_object.hpp  ghost.cpp  ghost.hpp  ghost_controller.hpp  input_handler.cpp  input_handler.hpp  player.cpp  player.hpp  scare_trigger.hpp  sound_manager.cpp  sound_manager.hpp  texture_manager.cpp  texture_manager.hpp
assets/levels/: level_1.txt
